<?xml version="1.0"?>
<package>
  <name>youbot_joy</name>
  <version>0.0.0</version>
  <description>The youbot_joy package</description>
  <maintainer email="rezwan@todo.todo">rezwan</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>joy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>turtlesim</build_depend>
  <run_depend>joy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>turtlesim</run_depend>

  <export>   

  </export>
</package>
